[gd_scene load_steps=11 format=3 uid="uid://ddh2fuxyvnktp"]

[ext_resource type="Script" uid="uid://bsnlv7pw0yws2" path="res://addons/hyh.digression/editor/nodes/EditorTextNode.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c0pw3rdictm2v" path="res://addons/hyh.digression/editor/nodes/EditorGraphNodeBase.tscn" id="2"]
[ext_resource type="StyleBox" uid="uid://bcokegjj2h4g3" path="res://addons/hyh.digression/editor/nodes/styles/dialogue_node.tres" id="2_slpx5"]
[ext_resource type="StyleBox" uid="uid://chdfnwd6ls43v" path="res://addons/hyh.digression/editor/nodes/styles/dialogue_node_selected.tres" id="3_mjv4r"]
[ext_resource type="StyleBox" uid="uid://b5ma0bjl3xxjm" path="res://addons/hyh.digression/editor/nodes/styles/dialogue_node_titlebar.tres" id="4_2212b"]
[ext_resource type="StyleBox" uid="uid://nu4578dkhf2b" path="res://addons/hyh.digression/editor/nodes/styles/dialogue_node_titlebar_selected.tres" id="5_cur1i"]
[ext_resource type="Texture2D" uid="uid://d65jtbo3b07t" path="res://addons/hyh.digression/icons/icon_clear.svg" id="7_13nfv"]
[ext_resource type="PackedScene" uid="uid://bi6s5ip3smrd5" path="res://addons/hyh.digression/editor/text/DialogueTextSection.tscn" id="8_biiwf"]
[ext_resource type="PackedScene" uid="uid://co4le7crf047l" path="res://addons/hyh.digression/editor/controls/drag/DragTargetHSeparator.tscn" id="8_jff3k"]
[ext_resource type="Texture2D" uid="uid://ddkdwrnkby3ww" path="res://addons/hyh.digression/icons/icon_add.svg" id="9_rnbxw"]

[node name="EditorTextNode" instance=ExtResource("2")]
offset_right = 560.0
offset_bottom = 336.0
theme_override_colors/resizer_color = Color(0, 0, 0, 1)
theme_override_styles/panel = ExtResource("2_slpx5")
theme_override_styles/panel_selected = ExtResource("3_mjv4r")
theme_override_styles/titlebar = ExtResource("4_2212b")
theme_override_styles/titlebar_selected = ExtResource("5_cur1i")
resizable = true
title = ""
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1")

[node name="RootContainer" type="MarginContainer" parent="." index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="VerticalLayout" type="VBoxContainer" parent="RootContainer" index="0"]
layout_mode = 2

[node name="CharacterOptionsContainer" type="GridContainer" parent="RootContainer/VerticalLayout" index="0"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 3
theme_override_constants/v_separation = 10
columns = 3

[node name="Label" type="Label" parent="RootContainer/VerticalLayout/CharacterOptionsContainer" index="0"]
layout_mode = 2
text = "Character:"

[node name="CharacterSelect" type="OptionButton" parent="RootContainer/VerticalLayout/CharacterOptionsContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = false

[node name="ClearCharacterButton" type="Button" parent="RootContainer/VerticalLayout/CharacterOptionsContainer" index="2"]
layout_mode = 2
icon = ExtResource("7_13nfv")
flat = true

[node name="DragTargetHSeparator" parent="RootContainer/VerticalLayout" index="1" instance=ExtResource("8_jff3k")]
layout_mode = 2
accepted_classes = Array[int]([1])

[node name="SectionsContainer" type="VBoxContainer" parent="RootContainer/VerticalLayout" index="2"]
layout_mode = 2
size_flags_vertical = 3

[node name="DialogueTextSection" parent="RootContainer/VerticalLayout/SectionsContainer" index="0" instance=ExtResource("8_biiwf")]
layout_mode = 2
size_flags_vertical = 3

[node name="AddSectionButton" type="Button" parent="RootContainer/VerticalLayout" index="3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Section"
icon = ExtResource("9_rnbxw")
flat = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="item_selected" from="RootContainer/VerticalLayout/CharacterOptionsContainer/CharacterSelect" to="." method="_on_character_select_item_selected"]
[connection signal="pressed" from="RootContainer/VerticalLayout/CharacterOptionsContainer/ClearCharacterButton" to="." method="_on_clear_character_button_pressed"]
[connection signal="dropped" from="RootContainer/VerticalLayout/DragTargetHSeparator" to="." method="_on_character_options_separator_dropped"]
[connection signal="pressed" from="RootContainer/VerticalLayout/AddSectionButton" to="." method="_on_add_section_button_pressed"]
